Adding dunfell to supported layer series

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -11,6 +11,8 @@ BBFILE_PRIORITY_meta-nerves= "9"
 
 NERVES_SYSTEM_PATH = '${@os.path.normpath("${LAYERDIR}/nerves_system")}'
 
+LAYERSERIES_COMPAT_fwup-layer = "sumo warrior dunfell"
+
 # yves
 BBDEBUG = "yes"
 
