--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -11,8 +11,8 @@ BBFILE_PRIORITY_meta-nerves= "9"
 
 NERVES_SYSTEM_PATH = '${@os.path.normpath("${LAYERDIR}/nerves_system")}'
 
-LAYERSERIES_COMPAT_meta-nerves-layer = "sumo warrior dunfell"
+LAYERSERIES_COMPAT_meta-nerves = "sumo warrior dunfell"
 
-# yves
+# yes
 BBDEBUG = "yes"
 
